--- a/src/main/resources/templates/thymeleaf/fo/myPage/information.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/information.html
@@ -44,35 +44,35 @@
 										<tr>
 											<th><span class="my-red">활동명</span></th>
 											<td>
-												<input type="text" class="input-5" placeholder="활동명을 기재해 주세요." />
+												<input type="text" class="input-5" placeholder="활동명을 기재해 주세요." id="artstActvtyNm" name="artstActvtyNm"/>
 												<p class="inp-p">※ 활동명은 작가님만 사용할 수 있어요.<br/>본인 실명으로 활동하신다면 실명을 기재해 주세요.</p>
 											</td>
 										</tr>
 										<tr>
 											<th>영문명</th>
-											<td><input type="text" class="input-5" placeholder="영문 활동명을 기재해 주세요." /></td>
+											<td><input type="text" class="input-5" placeholder="영문 활동명을 기재해 주세요." id="artstEnglsNm" name="artstEnglsNm"/></td>
 										</tr>
 										<tr>
 											<th>학력</th>
-											<td><input type="text" class="input-5" placeholder="학교 / 전공 등" /></td>
+											<td><input type="text" class="input-5" placeholder="학교 / 전공 등" id="artstEductn" name="artstEductn"/></td>
 										</tr>
 										<tr>
 											<th><span class="my-red">활동 분야</span></th>
 											<td>
 												<div class="pay-check dib mg-r50">
-													<input type="checkbox" id="a1" name="cc">
+													<input type="checkbox" id="a1" name="artstActvtyPartCd" class="artstActvtyPartCd">
 													<label for="a1"><span></span>회화</label>
 												</div>
 												<div class="pay-check dib mg-r50">
-													<input type="checkbox" id="a2" name="cc">
+													<input type="checkbox" id="a2" name="artstActvtyPartCd" class="artstActvtyPartCd">
 													<label for="a2"><span></span>조형</label>
 												</div>
 												<div class="pay-check dib mg-r50">
-													<input type="checkbox" id="a3" name="cc">
+													<input type="checkbox" id="a3" name="artstActvtyPartCd" class="artstActvtyPartCd">
 													<label for="a3"><span></span>영상/미디어</label>
 												</div>
 												<div class="pay-check dib mg-r50">
-													<input type="checkbox" id="a4" name="cc">
+													<input type="checkbox" id="a4" name="artstActvtyPartCd" class="artstActvtyPartCd">
 													<label for="a4"><span></span>설치</label>
 												</div>
 											</td>
@@ -82,17 +82,30 @@
 											<td>
 												<div class="selec-flex">
 													<div class="selec-box">
-														<select class="selectpicker">
-															<option>Mustard</option>
-															<option>Ketchup</option>
-															<option>Relish</option>
+														<select class="selectpicker" name="artstActvtyCd" id="artstActvtyCd">
+															<option value="KR" selected>대한민국</option>
+															
 														</select>
 													</div>
-													<div class="selec-box">
-														<select class="selectpicker">
-															<option>Mustard</option>
-															<option>Ketchup</option>
-															<option>Relish</option>
+													<div class="selec-box" style="display:none">
+														<select class="selectpicker" name="" id="">
+															<option value="KR-11" selected>서울특별시</option>
+															<option value="KR-26">부산광역시</option>
+															<option value="KR-27">대구광역시</option>
+															<option value="KR-28">인천광역시</option>
+															<option value="KR-29">광주광역시</option>
+															<option value="KR-30">대전광역시</option>
+															<option value="KR-31">울산광역시</option>
+															<option value="KR-50">세종특별자치시</option>
+															<option value="KR-41">경기도</option>
+															<option value="KR-42">강원도</option>
+															<option value="KR-43">충청북도</option>
+															<option value="KR-44">충청남도</option>
+															<option	value="KR-45">전라북도</option>
+															<option	value="KR-46">전라남도</option>
+															<option	value="KR-47">경상북도</option>
+															<option	value="KR-48">경상남도</option>
+															<option	value="KR-49">제주특별자치도</option>
 														</select>
 													</div>
 												</div>
@@ -115,15 +128,15 @@
 										<table class="mstyle-2">
 											<tr>
 												<th>홈페이지</th>
-												<td><input type="text" class="input-5" placeholder="URL" /></td>
+												<td><input type="text" class="input-5" placeholder="URL" id="artstHmpgUrl" name="artstHmpgUrl" /></td>
 											</tr>
 											<tr>
 												<th>페이스북</th>
-												<td><input type="text" class="input-5" placeholder="페이스북 아이디" /></td>
+												<td><input type="text" class="input-5" placeholder="페이스북 아이디" id="artstFacebookId" name="artstFacebookId"/></td>
 											</tr>
 											<tr>
 												<th>인스타그램</th>
-												<td><input type="text" class="input-5" placeholder="인스타그램 아이디" /></td>
+												<td><input type="text" class="input-5" placeholder="인스타그램 아이디" id="artstInstagramId" name="artstInstagramId"/></td>
 											</tr>
 										</table>
 									</div>
@@ -136,32 +149,78 @@
 							<div class="myd-box">
 								<div class="myd-box-3">
 									<div>
-										<table class="mstyle-2">
-											<tr>
-												<th>경력</th>
-												<td>
-													<input type="text" class="input-5" placeholder="연도 - 교육, 연구이력 등" />
-													<a href="#" class="mg_l10"><img src="/resources/img/mypage/icon-d.png" class="ic-dp" /></a>
-												</td>
-											</tr>
-											<tr>
-												<th>소속</th>
-												<td>
-													<input type="text" class="input-5" placeholder="연도 - 교육, 연구이력 등" />
-													<a href="#" class="mg_l10"><img src="/resources/img/mypage/icon-d.png" class="ic-dp" /></a>
-												</td>
-											</tr>
+										<table class="mstyle-2" id="careerListTemp" style="display:none">
 											<tr>
 												<th></th>
 												<td>
 													<input type="text" class="input-5" placeholder="연도 - 교육, 연구이력 등" />
-													<a href="#" class="mg_l10"><img src="/resources/img/mypage/icon-d.png" class="ic-dp" /></a>
+													<img src="/resources/img/mypage/icon-d.png" class="ic-dp mg_l10 careerMinusBtn" style="cursor:pointer"/>
 												</td>
 											</tr>
 										</table>
+											
+										<table class="mstyle-2 careerGroup" id="careerList">
+											<tr>
+												<th>경력</th>
+												<td>
+													<input type="text" class="input-5" placeholder="연도 - 교육, 연구이력 등" />
+													<img src="/resources/img/mypage/icon-p.png" class="ic-dp mg_l10 careerAddBtn" style="cursor:pointer"/>
+												</td>
+											</tr>
+										</table>
+										
+										<table class="mstyle-2" id="belongListTemp" style="display:none">
+											<tr>
+												<th></th>
+												<td>
+													<input type="text" class="input-5" placeholder="연도 - 갤러리, 협회" />
+													<img src="/resources/img/mypage/icon-d.png" class="ic-dp mg_l10 belongMinusBtn" style="cursor:pointer"/>
+												</td>
+											</tr>
+										</table>
+										
+										<table class="mstyle-2 belongGroup" id="belongList">
+											<tr>
+												<th>소속</th>
+												<td>
+													<input type="text" class="input-5" placeholder="연도 - 갤러리, 협회" />
+													<img src="/resources/img/mypage/icon-p.png" class="ic-dp mg_l10 belongAddBtn" style="cursor:pointer"/>
+												</td>
+											</tr>
+										</table>
+											
 									</div>
 								</div>
 							</div>
+							
+							<script type="text/javascript">
+								
+								/* 경력정보 */
+								$(".careerAddBtn").click(function(){
+									var newitem = $("#careerListTemp tr:eq(0)").clone();
+									$("#careerList").append(newitem);
+														
+							 	}); 
+								
+								$('table.careerGroup').on('click', '.careerMinusBtn', function() {
+									  const tr = this.parentElement.parentElement;
+									  tr.remove();
+								});
+								/* 경력정보 */
+								
+								/* 소속 */
+								$(".belongAddBtn").click(function(){
+									var newitem = $("#belongListTemp tr:eq(0)").clone();
+									$("#belongList").append(newitem);
+														
+							 	}); 
+								$('table.belongGroup').on('click', '.belongMinusBtn', function() {
+									  const tr = this.parentElement.parentElement;
+									  tr.remove();
+								});
+								/* 소속 */
+							</script>
+
 							
 							<div class="med">
 								<h2 class="h2-con">전시정보</h2>
@@ -169,36 +228,151 @@
 							<div class="myd-box">
 								<div class="myd-box-3">
 									<div>
-										<table class="mstyle-2">
+										
+										<table class="mstyle-2" id="perDonginListTemp" style="display:none">
+											<tr>
+												<th></th>
+												<td>
+													<input type="text" class="input-5" placeholder="연도 및 내역" />
+													<img src="/resources/img/mypage/icon-d.png" class="ic-dp mg_l10 perDonginMinusBtn" style="cursor:pointer"/>
+												</td>
+											</tr>
+										</table>
+										<table class="mstyle-2 perDoinGroup" id="perDonginList">
 											<tr>
 												<th>개인전/단체전</th>
 												<td>
 													<input type="text" class="input-5" placeholder="연도 및 내역" />
-													<a href="#" class="mg_l10"><img src="/resources/img/mypage/icon-p.png" class="ic-dp" /></a>
+													<img src="/resources/img/mypage/icon-p.png" class="ic-dp mg_l10 perDonginAddBtn" style="cursor:pointer"/>
 												</td>
 											</tr>
+										</table>
+										
+										<script type="text/javascript">
+											
+											/* 개인전, 단체전(동인전)   */
+											$(".perDonginAddBtn").click(function(){
+												var newitem = $("#perDonginListTemp tr:eq(0)").clone();
+												$("#perDonginList").append(newitem);
+																	
+										 	}); 
+											
+											$('table.perDoinGroup').on('click', '.perDonginMinusBtn', function() {
+												  const tr = this.parentElement.parentElement;
+												  tr.remove();
+											});
+											/* 개인전, 단체전(동인전)   */
+											
+										</script>
+										
+										
+										<table class="mstyle-2" id="artFairListTemp" style="display:none">
+											<tr>
+												<th></th>
+												<td>
+													<input type="text" class="input-5" placeholder="연도 및 내역" />
+													<img src="/resources/img/mypage/icon-d.png" class="ic-dp mg_l10 artFairMinesBtn" style="cursor:pointer"/>
+												</td>
+											</tr>
+										</table>
+										
+										<table class="mstyle-2 artFairGroup" id="artFairList">
 											<tr>
 												<th>아트페어</th>
 												<td>
 													<input type="text" class="input-5" placeholder="연도 및 내역" />
-													<a href="#" class="mg_l10"><img src="/resources/img/mypage/icon-p.png" class="ic-dp" /></a>
+													<img src="/resources/img/mypage/icon-p.png" class="ic-dp mg_l10 artFairAddBtn" style="cursor:pointer"/>
 												</td>
 											</tr>
+										</table>
+										
+										<script type="text/javascript">
+											
+											/* 아트페어   */
+											$(".artFairAddBtn").click(function(){
+												var newitem = $("#artFairListTemp tr:eq(0)").clone();
+												$("#artFairList").append(newitem);
+																	
+										 	}); 
+											
+											$('table.artFairGroup').on('click', '.artFairMinesBtn', function() {
+												  const tr = this.parentElement.parentElement;
+												  tr.remove();
+											});
+											/* 아트페어   */
+											
+										</script>
+										
+										<table class="mstyle-2" id="residencyListTemp" style="display:none">
+											<tr>
+												<th></th>
+												<td>
+													<input type="text" class="input-5" placeholder="연도 및 내역" />
+													<img src="/resources/img/mypage/icon-d.png" class="ic-dp mg_l10 residencyMinusBtn" style="cursor:pointer"/>
+												</td>
+											</tr>
+										</table>
+										
+										<table class="mstyle-2 residencyGroup" id="residencyList">
 											<tr>
 												<th>레지던시</th>
 												<td>
 													<input type="text" class="input-5" placeholder="연도 및 내역" />
-													<a href="#" class="mg_l10"><img src="/resources/img/mypage/icon-p.png" class="ic-dp" /></a>
+													<img src="/resources/img/mypage/icon-p.png" class="ic-dp mg_l10 residencyAddBtn" style="cursor:pointer"/>
 												</td>
 											</tr>
+										</table>
+										
+										<script type="text/javascript">
+											/* 레지던시   */
+											$(".residencyAddBtn").click(function(){
+												var newitem = $("#residencyListTemp tr:eq(0)").clone();
+												$("#residencyList").append(newitem);
+																	
+										 	}); 
+											
+											$('table.residencyGroup').on('click', '.residencyMinusBtn', function() {
+												  const tr = this.parentElement.parentElement;
+												  tr.remove();
+											});
+											/* 레지던시   */
+										</script>
+										
+										<table class="mstyle-2" id="awardslistTemp" style="display:none">
 											<tr>
 												<th>수상</th>
 												<td>
 													<input type="text" class="input-5" placeholder="연도 및 내역" />
-													<a href="#" class="mg_l10"><img src="/resources/img/mypage/icon-p.png" class="ic-dp" /></a>
+													<img src="/resources/img/mypage/icon-d.png" class="ic-dp mg_l10 awardsMinusBtn" style="cursor:pointer"/>
 												</td>
 											</tr>
 										</table>
+										
+										<table class="mstyle-2 awardsGroup" id="awardslist">
+											<tr>
+												<th>수상</th>
+												<td>
+													<input type="text" class="input-5" placeholder="연도 및 내역" />
+													<img src="/resources/img/mypage/icon-p.png" class="ic-dp mg_l10 awardsAddBtn" style="cursor:pointer"/>
+												</td>
+											</tr>
+										</table>
+										
+										<script type="text/javascript">
+											/* 레지던시   */
+											$(".awardsAddBtn").click(function(){
+												var newitem = $("#awardslistTemp tr:eq(0)").clone();
+												$("#awardslist").append(newitem);
+																	
+										 	}); 
+											
+											$('table.awardsGroup').on('click', '.awardsMinusBtn', function() {
+												  const tr = this.parentElement.parentElement;
+												  tr.remove();
+											});
+											/* 레지던시   */
+										</script>
+										
 									</div>
 								</div>
 							</div>
@@ -473,9 +647,7 @@
 </div>
 
 <script type="text/javascript">      
-      
-      
-      
+            
       $(document).ready(function () {
 	      $(".elm").hover(
 	    	function(){ $(this).addClass('hover') },
@@ -486,6 +658,8 @@
 	   	    function(){ $(this).removeClass('gis') }
 	   	  )
 	   	 //$("#myModal5").modal("show");
+      
+	   	
       });
       
       $(function() {                      
