--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<script src="https://api-std.mainpay.co.kr/js/mainpay.pc-1.1.js"></script>
 <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+<script type="text/javascript" src="resources/js/com.js"></script>
 <head>
     <style>
     	.head-wrap{border-bottom:#e9e9e9 1px solid;}
@@ -190,7 +190,7 @@
 									<div class="myd-box-2">
 										<table class="mstyle-2">
 											<tr>
-												<th><span class="my-red">구매자 부가서비스(필수)</span></th>
+												<th><span class="my-red">부가서비스(필수)</span></th>
 												<td class="pd_t17">
 													<div class="selec-box bg-st">
 														<select class="selectpicker" id="sbx_trnsprtTypCd" style="min-width:300px !important;">
@@ -218,7 +218,7 @@
 															<option value="null">-선택-</option>
 														</select>
 													</div>
-													<div class="comy-sum" id="div_trnsprtServiceCd">
+													<div id="div_trnsprtServiceCd">
 													</div>
 												</td>
 											</tr>
@@ -420,6 +420,7 @@
 								<!-- <a href="#" class="ba-btn1" id="btn_payment" style="display:none;" onclick="call(200)"><span>결제하기</span></a> -->
 								<a href="#" class="ba-btn1" id="btn_payment" style="display:none;" onclick="btn_payment()"><span>결제하기</span></a>
 								<a href="javascript:location.href='/myDeal';" class="ba-btn2" ><span>돌아가기</span></a>
+								
 							</div>
 						</div>
 						
@@ -475,8 +476,8 @@ var disc = 0; //할인할 금액
 var totalAmount = 0; //최종 결제 금액
 var sbx_couponSqList = []; //셀렉트 박스 쿠폰 순번 저장용
 var trnsprt = new Object(); //운송 테이블
-var trnsprtServiceCdList = []; //운송 서비스 코드 Array
-var trnsprtPrcList = []; //운송 가격 Array
+//var trnsprtServiceCdList = []; //운송 서비스 코드 Array
+//var trnsprtPrcList = []; //운송 가격 Array
 var workGrtUrl = new Image(); //보증서
 workGrtUrl.src = result.dealInfo.workGrtUrl; //보증서 주소
 //$("#mainPayCall").val(1);
@@ -740,33 +741,58 @@ function btn_paymethod_onclick(obj){
 window.call = function (data) {
 	//2차 결제면 운송 정보를 입력한다.
 	if(data == "200" && result.dealInfo.buyPaymntSttsCd == "2PW"){
-		var trnsprtList = [];
-		for(var i=0; i<trnsprt.trnsprtServiceCd.length; i++){
+		var trnsprtInfo = [];
+		var getTrnsprt = []; //운송 정보 조회해올 Array
+		var trnsprtPrc = 0; //부가 서비스 금액
+		var trnsprtServiceCdNm = ''; //부가서비스 이름
+		var cmyWonList = document.querySelectorAll(".cmy-won"); //부가 서비스 금액을 불러온다
+		var cmyTextList = document.querySelectorAll(".cmy-text"); //부가 서비스 이름을 불러온다
+		for(var i=0; i<cmyWonList.length; i++){ //부가 서비스 갯수만큼
+			trnsprtPrc = cmyWonList[i].innerText.replaceAll(/,/g, ''); //부가서비스 금액을 가져온다
+			trnsprtPrc = parseInt(trnsprtPrc.replaceAll(' KRW', '')); //부가서비스 금액을 가져온다
+			trnsprtServiceCdNm = cmyTextList[i].innerText;
 			var data = {
-				dealSq : result.dealInfo.dealSq,
-				buyMbrSq : result.mbrInfo.buyMbrSq, 
-				sellMbrSq : result.dealInfo.sellMbrSq, 
-				artstSq : result.dealInfo.artstSq,
-				trnsprtDivCd : "B",
-				trnsprtTypCd : trnsprt.trnsprtTypCd,
-				trnsprtAreaCd : trnsprt.trnsprtAreaCd,
-				trnsprtServiceCd : trnsprt.trnsprtServiceCd[i],
-				trnsprtPrc : trnsprt.trnsprtPrc[i].replaceAll(/,/g, '')
-			};
-			trnsprtList.push(data);
+					trnsprtDivCd : "B",
+					trnsprtServiceCdNm : trnsprtServiceCdNm,
+					trnsprtPrc : trnsprtPrc,
+					trnsprtTypCd : $("#sbx_trnsprtTypCd option:selected").val(),
+					trnsprtAreaCd : $("#sbx_trnsprtAreaCd option:selected").val()
+				};
+			getTrnsprt.push(data);
 		}
 		$.ajax({
 			type: "POST",
 			contentType: "application/json",
-	        url: "/insertTrnsprt",
-	        data: JSON.stringify(trnsprtList),
+	        url: "/getTrnsprt",
+	        data: JSON.stringify(getTrnsprt),
 	        async: false,
 			success:function(data){
+				trnsprtInfo = data.result;
 			},
 			error: function(error) {
 	            alert("오류 발생" + error);
 	        }
 		}); 
+		if(trnsprtInfo.length > 0){
+			var param = new Object();
+			param.trnsprtInfo = trnsprtInfo;
+			param.dealSq = result.dealInfo.dealSq;
+			param.buyMbrSq = result.mbrInfo.buyMbrSq; 
+			param.sellMbrSq = result.dealInfo.sellMbrSq; 
+			param.artstSq = result.dealInfo.artstSq;
+			$.ajax({
+				type: "POST",
+				contentType: "application/json",
+		        url: "/insertTrnsprt",
+		        data: JSON.stringify(param),
+		        async: false,
+				success:function(data){
+				},
+				error: function(error) {
+		            alert("오류 발생" + error);
+		        }
+			});
+		}
 	}
 	location.reload();
 };
@@ -774,7 +800,6 @@ window.call = function (data) {
 //운송 구분 선택시
 $("#sbx_trnsprtTypCd").on("change", function(){
 	$("#div_trnsprtServiceCd").empty();
-	trnsprtServiceCdList = []; //서비스 선택 Array 초기화
 	var selected = $(this).val(); //선택된 값 가져오기
 	if(selected == "null"){
 		$("#div_trnsprtTypCd").empty();
@@ -793,89 +818,95 @@ $("#sbx_trnsprtTypCd").on("change", function(){
 			$(".selectpicker").selectpicker("refresh");
 			$('#sbx_trnsprtAreaCd').data('selectpicker').$button.focus(); //서비스 셀렉트 박스에 포커스 주기
 		}else{ //일반 운송이면
-			$('#sbx_trnsprtAreaCd').val(null); //초기값 선택
-			$('#sbx_trnsprtServiceCd').val(null); //초기값 선택
 			$("#sbx_trnsprtAreaCd").selectpicker("hide"); //지역 셀렉트박스 숨기기
-			$("#sbx_trnsprtAreaCd").selectpicker("refresh"); //셀렉트픽커 새로고침
-			var target = document.getElementById("sbx_trnsprtServiceCd");
-			target.disabled = false; //서비스 선택 셀렉트 박스 활성화
-			target.options.length = 1; //서비스 선택 셀렉트박스 옵션 초기화
-			var trnsprtServiceCd = {
-					text : ["작품 컨디션 체크", "작품 보관료"],
-					value : ["WCC", "ASF"]
-					}; //서비스 셀렉트 박스에 넣을 옵션
-			
-			for(var i=0; i<trnsprtServiceCd.value.length; i++){ //서비스 셀렉트 박스에 옵션 추가
-				var opt = document.createElement("option");
-				opt.value = trnsprtServiceCd.value[i];
-				opt.text = trnsprtServiceCd.text[i];
-				target.appendChild(opt);
-			}
 			$(".selectpicker").selectpicker("refresh"); //셀렉트픽커 새로고침
-			$('#sbx_trnsprtServiceCd').data('selectpicker').$button.focus(); //서비스 셀렉트 박스에 포커스 주기
-			
 			//운송 가격 표시하기
 			var innerText = "";
-			innerText += '<div class="comy-box">';
-			innerText += '	<div class="cmy-text">직접운송</div>';
-			innerText += '	<div class="cmy-won">0 KRW</div>';
-			innerText += '	<div class="cmy-end">X</div>';
-			innerText += '</div>';
-			$("#div_trnsprtTypCd").empty();
-			$("#div_trnsprtTypCd").append(innerText).trigger("create"); //운송 가격 정보 추가
-			
+			$.ajax({
+				type: "POST",
+		        url: "/selectTrnsprtInfo",
+		        data: {
+		        	trnsprtDivCd : "B", //판매자
+		    		trnsprtTypCd : document.getElementById("sbx_trnsprtTypCd").value, //운송 구분 코드
+		    		trnsprtReqYn : "Y" //부가서비스 필수 여부
+		        },
+		        async: false,
+				success: function(data){
+					for(var i=0; i<data.result.length; i++){
+						innerText += '<div class="comy-box">';
+						innerText += '	<div class="cmy-text">'+data.result[i].text+'</div>';
+						innerText += '	<div class="cmy-won">'+data.result[i].value+' KRW</div>';
+						//innerText += '	<div class="cmy-end">X</div>';
+						innerText += '</div>';
+					}
+					$("#div_trnsprtTypCd").empty();
+					$("#div_trnsprtTypCd").append(innerText).trigger("create"); //운송 가격 정보 추가
+					trnsprtServiceCdList.push("SF"); //서비스 선택 Array에 값 추가
+					trnsprt.trnsprtServiceCd = trnsprtServiceCdList;
+					trnsprtPrcList.push(data.result.trnsprtPrc); //운송 가격 Array에 값 추가
+					trnsprt.trnsprtPrc = trnsprtPrcList;
+				},
+				error: function(error) {
+		            alert("오류 발생" + error);
+		        }
+			});
 		}
 	}
-	trnsprt.trnsprtTypCd = selected; //운송 서비스 선택
 	totalTrnsprtPrc(); //총 금액 자동계산
 });
 
 //운송 지역 구분 선택시
 $("#sbx_trnsprtAreaCd").on("change", function(){
 	$("#div_trnsprtServiceCd").empty();
-	trnsprtServiceCdList = []; //서비스 선택 Array 초기화
 	var selected = $(this).val(); //선택된 값 가져오기
 	if(selected == "null"){
 		$("#div_trnsprtTypCd").empty();
 	}else{
 		var target = document.getElementById("sbx_trnsprtServiceCd");
 		var innerText = "";
-		
-		target.options.length = 1; //서비스 선택 셀렉트박스 옵션 초기화
-		var trnsprtServiceCd = {
-				text : ["작품 컨디션 체크"],
-				value : ["WCC"]
-				}; //서비스 셀렉트 박스에 넣을 옵션
-		
-		for(var i=0; i<trnsprtServiceCd.value.length; i++){ //서비스 셀렉트 박스에 옵션 추가
-			var opt = document.createElement("option");
-			opt.value = trnsprtServiceCd.value[i];
-			opt.text = trnsprtServiceCd.text[i];
-			target.appendChild(opt); //서비스 선택 셀렉트박스 옵션 추가
-		}
-		
-		target.disabled = false; //서비스 선택 셀렉트 박스 활성화
-		$(".selectpicker").selectpicker("refresh"); //셀렉트픽커 새로고침
-		$('#sbx_trnsprtServiceCd').data('selectpicker').$button.focus(); //서비스 셀렉트 박스에 포커스 주기
-		
-		var paramMap = new Object();
-		paramMap.trnsprtDivCd = "B"; //판매자
-		paramMap.trnsprtTypCd = document.getElementById("sbx_trnsprtTypCd").value; //운송 구분 코드
-		paramMap.trnsprtAreaCd = selected; //지역 코드
-		paramMap.trnsprtServiceCd = "SF"; //서비스 구분 코드
+		//부가서비스 선택 셀렉트 박스에 text, value 넣기
 		$.ajax({
 			type: "POST",
 	        url: "/selectTrnsprtInfo",
-	        data: paramMap,
+	        data: {
+	        	trnsprtDivCd : "B", //판매자
+	    		trnsprtTypCd : document.getElementById("sbx_trnsprtTypCd").value, //운송 구분 코드
+	    		trnsprtAreaCd : selected, //지역 코드
+	    		trnsprtReqYn : "N" //부가서비스 필수 여부
+	        },
 	        async: false,
 			success: function(data){
-				//운송 가격 표시하기
-				var innerText = "";
-				innerText += '<div class="comy-box">';
-				innerText += '	<div class="cmy-text">'+data.result.trnsprtCdNm.trnsprtTypCdNm+' ('+data.result.trnsprtCdNm.trnsprtAreaCdNm+')</div>';
-				innerText += '	<div class="cmy-won">'+data.result.trnsprtPrc+' KRW</div>';
-				innerText += '	<div class="cmy-end">X</div>';
-				innerText += '</div>';
+				target.options.length = 1; //서비스 선택 셀렉트박스 옵션 초기화
+				for(var i=0; i<data.result.length; i++){ //서비스 셀렉트 박스에 옵션 추가
+					var opt = document.createElement("option");
+					opt.value = data.result[i].value;
+					opt.text = data.result[i].text;
+					target.appendChild(opt); //서비스 선택 셀렉트박스 옵션 추가
+				}
+			},
+			error: function(error) {
+	            alert("오류 발생" + error);
+	        }
+		});
+		//운송 가격 표시하기
+		$.ajax({
+			type: "POST",
+	        url: "/selectTrnsprtInfo",
+	        data: {
+	        	trnsprtDivCd : "B", //판매자
+	    		trnsprtTypCd : document.getElementById("sbx_trnsprtTypCd").value, //운송 구분 코드
+	    		trnsprtAreaCd : selected, //지역 코드
+	    		trnsprtReqYn : "Y" //부가서비스 필수 여부
+	        },
+	        async: false,
+			success: function(data){
+				for(var i=0; i<data.result.length; i++){
+					innerText += '<div class="comy-box">';
+					innerText += '	<div class="cmy-text">'+data.result[i].text+'</div>';
+					innerText += '	<div class="cmy-won">'+data.result[i].value+' KRW</div>';
+					//innerText += '	<div class="cmy-end">X</div>';
+					innerText += '</div>';
+				}
 				$("#div_trnsprtTypCd").empty();
 				$("#div_trnsprtTypCd").append(innerText).trigger("create"); //운송 가격 정보 추가
 				trnsprtServiceCdList.push("SF"); //서비스 선택 Array에 값 추가
@@ -886,9 +917,13 @@ $("#sbx_trnsprtAreaCd").on("change", function(){
 			error: function(error) {
 	            alert("오류 발생" + error);
 	        }
-		}); 
+		});
+		target.disabled = false; //서비스 선택 셀렉트 박스 활성화
+		$(".selectpicker").selectpicker("refresh"); //셀렉트픽커 새로고침
+		$('#sbx_trnsprtServiceCd').data('selectpicker').$button.focus(); //서비스 셀렉트 박스에 포커스 주기
+		
+		
 	}
-	trnsprt.trnsprtAreaCd = selected; //운송 지역코드 선택
 	totalTrnsprtPrc(); //총 금액 자동계산
 });
 
@@ -900,34 +935,14 @@ $("#sbx_trnsprtServiceCd").on("change", function(){
 		trnsprtServiceCdList = []; //운송 서비스 Array 초기화
 		totalTrnsprtPrc(); //총 금액 자동계산
 	}else{
-		var paramMap = new Object();
-		paramMap.trnsprtDivCd = "B"; //판매자
-		paramMap.trnsprtTypCd = document.getElementById("sbx_trnsprtTypCd").value; //운송 구분 코드
-		paramMap.trnsprtAreaCd = document.getElementById("sbx_trnsprtAreaCd").value; //지역 코드
-		paramMap.trnsprtServiceCd = selected; //서비스 구분 코드
-		$.ajax({
-			url:"/selectTrnsprtInfo",
-			type:"post",
-	        data: paramMap,
-			success: function(data){
-				//운송 가격 표시하기
-				var innerText = "";
-				innerText += '<div class="comy-box">';
-				innerText += '	<div class="cmy-text">'+data.result.trnsprtCdNm.trnsprtServiceCdNm+'</div>';
-				innerText += '	<div class="cmy-won">'+data.result.trnsprtPrc+' KRW</div>';
-				innerText += '	<div class="cmy-end">X</div>';
-				innerText += '</div>';
-				$("#div_trnsprtServiceCd").append(innerText).trigger("create"); //운송 가격 정보 추가
-				trnsprtServiceCdList.push(selected); //운송 서비스 선택 Array에 값 추가
-				trnsprt.trnsprtServiceCd = trnsprtServiceCdList; 
-				trnsprtPrcList.push(data.result.trnsprtPrc); //운송 가격 Array에 값 추가
-				trnsprt.trnsprtPrc = trnsprtPrcList;
-				totalTrnsprtPrc(); //총 금액 자동계산
-			},
-			error: function(error) {
-	            alert("오류 발생" + error);
-	        }
-		}); 
+		var innerText = '';
+		innerText += '<div class="comy-box">';
+		innerText += '	<div class="cmy-text">'+$("#sbx_trnsprtServiceCd option:selected").text()+'</div>';
+		innerText += '	<div class="cmy-won">'+$("#sbx_trnsprtServiceCd option:selected").val()+' KRW</div>';
+		//innerText += '	<div class="cmy-end">X</div>';
+		innerText += '</div>';
+		$("#div_trnsprtServiceCd").append(innerText).trigger("create"); //운송 가격 정보 추가
+		totalTrnsprtPrc(); //총 금액 자동계산
 	}
 });
 
