--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -38,10 +38,34 @@
 							</div> 
 							-->
 							<div class="swiper-slide">
-								<img src="resources/img/banner-grandopen.jpg" onclick="javascript:location.href='/totalSearch_work?searchKeyword=사전출품';" style="cursor:pointer;"/>
+								<img src="resources/img/banner-8.jpg"/>
+								<div class="mab-text">
+									<div class="mb1-box">
+										<div class="mb1-title" onclick="javascript:location.href='/totalSearch_work?searchKeyword=사전출품';" style="cursor:pointer;">사전출품작보러가기</div>
+										<div class="mb1-title2">GRAND OPEN</div>
+										<div class="mb1-title3">오픈 기념 수수료 할인 이벤트</div>
+										<div class="mb1-title4">판매자 3%, 구매자 6%</div>
+									</div>
+								</div>
 							</div>
 							<div class="swiper-slide">
-								<img src="resources/img/banner-artpareDaegu.jpg" />
+								<img src="resources/img/banner-9.jpg" />
+								<div class="mab-text">
+									<div class="mb2-box">
+										<div class="mb2-logo"><img src="resources/img/banner_logo1.png"></div>
+										<div class="mb2-text1">
+											<li>개인간 미술품 거래 플랫폼 딜링아트 서비스 안내</li>
+											<li>현장방문시 딜링아트 오픈기념 운송료 5만원 쿠폰 지급<img src="resources/img/banner_ico1.png"></li>
+										</div>
+									</div>
+									<div class="mb3-box">
+										<div class="mb3-text1">
+											<li>대구 엑스코 서관 1, 2홀</li>
+											<li>2022.6.23 ~ 6.26</li>
+											<li>6.23 ONLY VIP & PRESS 프리뷰</li>
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
 						<div class="swiper-pagination swpa-1"></div>
