--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -434,7 +434,7 @@ function onload(sort, type){
 				
 				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;">';
 				html += '<div >';
-				html += '<div class="item-div-img sold-3" onclick="dealDetail('+ result[i].workSq +')">';
+				html += '<div class="item-div-img sold-3">';
 				//작품 이미지
 				html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 				html += '</div>';
