--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -735,7 +735,7 @@
 		     					
 	     						html += '<div class="griditem '+gtText+'" style="border:0px solid #222;">';
 		     					html += '<div >';
-		     					html += '<div class="item-div-img sold-3" onclick="workDetail('+ dealList[i].workSq +')">';
+		     					html += '<div class="item-div-img sold-3">';
 		     					//작품 이미지
 		     					html += '<img src="'+ dealList[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 		     					html += '</div>';
