--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -270,7 +270,7 @@
 	
 	$(document).ready(function() {
 		
-		alert("딜링아트에 오신 것을 환영합니다.\r\r현재 베타테스트 기간 중 쌓인 데이터를 정리중에 있습니다.\r완료되는 오후 6시 부터 작품 구매 및 응찰이 가능합니다.\r불편을 드린데에 너그러운 양해 부탁드립니다.");
+		alert("딜링아트에 오신 것을 환영합니다.\r\r현재 베타테스트 기간 중 쌓인 데이터를 정리중에 있습니다.\r완료되는 오후 7시 부터 작품 구매 및 응찰이 가능합니다.\r불편을 드린데에 너그러운 양해 부탁드립니다!");
 		
 	    $(".elm").hover(
 	  	function(){ $(this).addClass('hover') },
